--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goof",
+  "name": "goof-app",
   "version": "1.0.1",
   "description": "A vulnerable todo demo application",
   "homepage": "https://snyk.io/",
